# nws-cpp

./: .clang-format  .gitignore  CHANGELOG.md  CLAUDE.md  CMakeLists.txt  CONTRIBUTING.md  Makefile  README.md  SECURITY.md
.github/ISSUE_TEMPLATE/: config.yml
.github/workflows/: ci.yml  release.yml
cmake/: nwsConfig.cmake.in
examples/: CMakeLists.txt  basic_usage.cpp  get_alerts.cpp  get_forecast.cpp  get_observations.cpp  weather_monitor.cpp
include/nws/: api.hpp  cache.hpp  error.hpp  geo.hpp  http_client.hpp  nws.hpp  pagination.hpp  rate_limit.hpp  retry.hpp  units.hpp
include/nws/models/: alert.hpp  aviation.hpp  common.hpp  forecast.hpp  glossary.hpp  gridpoint.hpp  observation.hpp  office.hpp  point.hpp  product.hpp  radar.hpp  station.hpp  zone.hpp
src/: CMakeLists.txt
src/api/: client.cpp
src/core/: error.cpp  rate_limit.cpp  retry.cpp  units.cpp
src/http/: client.cpp
src/models/: alert.cpp  aviation.cpp  common.cpp  forecast.cpp  glaze_detail.cpp  glaze_detail.hpp  glossary.cpp  gridpoint.cpp  observation.cpp  office.cpp  point.cpp  product.cpp  radar.cpp  station.cpp  zone.cpp
tests/: CMakeLists.txt  glaze_test.cpp  parse_benchmark.cpp  test_api.cpp  test_cache.cpp  test_error.cpp  test_models.cpp  test_pagination.cpp  test_rate_limit.cpp  test_retry.cpp  test_units.cpp
tests/fixtures/: alert_response.json  forecast_response.json  observation_response.json  point_response.json  station_response.json
tools/: bench.sh  cpp_auto_allowlist.txt
